force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/JHJX__CollatDocCode__c.field-meta.xml
<CustomField>
    <fullName>JHJX__CollatDocCode__c</fullName>
    <description>Users populate this optional picklist field to specify a collateral document type code. This field is mapped to the jXchange field CollatDocCode. The default value is blank.</description>
    <inlineHelpText>Select a Collateral Document Type Code.</inlineHelpText>
    <label>Collateral Document Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <label>Vehicle Title</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>Security Agreement</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>UCC Agreement</label>
            </value>
            <value>
                <fullName>004</fullName>
                <label>Deed of Trust</label>
            </value>
            <value>
                <fullName>005</fullName>
                <label>Certificate of Deposit</label>
            </value>
            <value>
                <fullName>006</fullName>
                <label>Savings Assignment</label>
            </value>
            <value>
                <fullName>007</fullName>
                <label>Accounts Receivable Listing</label>
            </value>
            <value>
                <fullName>008</fullName>
                <label>Construction Binder</label>
            </value>
            <value>
                <fullName>009</fullName>
                <label>Vehicle Insurance</label>
            </value>
            <value>
                <fullName>010</fullName>
                <label>Property Insurance</label>
            </value>
            <value>
                <fullName>011</fullName>
                <label>Equipment Insurance</label>
            </value>
            <value>
                <fullName>012</fullName>
                <label>Assignment of Rents</label>
            </value>
            <value>
                <fullName>013</fullName>
                <label>Rental Agreement</label>
            </value>
            <value>
                <fullName>014</fullName>
                <label>Rent Roll</label>
            </value>
            <value>
                <fullName>015</fullName>
                <label>Title Commitment</label>
            </value>
            <value>
                <fullName>016</fullName>
                <label>Title Insurance</label>
            </value>
            <value>
                <fullName>017</fullName>
                <label>Balance Sheet</label>
            </value>
            <value>
                <fullName>018</fullName>
                <label>Profit and Loss Statement</label>
            </value>
            <value>
                <fullName>019</fullName>
                <label>CPA Prepared Financial Stmt</label>
            </value>
            <value>
                <fullName>020</fullName>
                <label>Audited Financial Statement</label>
            </value>
            <value>
                <fullName>021</fullName>
                <label>Financial Statement</label>
            </value>
            <value>
                <fullName>022</fullName>
                <label>Personal Tax Return</label>
            </value>
            <value>
                <fullName>023</fullName>
                <label>Business Tax Return</label>
            </value>
            <value>
                <fullName>024</fullName>
                <label>Extension of Tax Return</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>