force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/JHJX__CollatDocDt__c.field-meta.xml
<CustomField>
    <fullName>JHJX__CollatDocDt__c</fullName>
    <description>Users populate this optional date field to specify a collateral document date. This field is mapped to the jXchange field CollatDocDt. The default value is blank.</description>
    <inlineHelpText>Enter a Collateral Document Date.</inlineHelpText>
    <label>Collateral Document Date</label>
    <type>Date</type>
</CustomField>