force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/JHJX__CollatDocExcDt__c.field-meta.xml
<CustomField>
    <fullName>JHJX__CollatDocExcDt__c</fullName>
    <description>Users populate this optional date field to specify a collateral document letter date. This field is mapped to the jXchange field CollatDocExcDt. The default value is blank.</description>
    <inlineHelpText>Enter a Collateral Document Letter Date.</inlineHelpText>
    <label>Collateral Document Letter Date</label>
    <type>Date</type>
</CustomField>