force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/JHJX__CollatDocExcLtrId__c.field-meta.xml
<CustomField>
    <fullName>JHJX__CollatDocExcLtrId__c</fullName>
    <description>Users populate this optional text field to specify a collateral document exception letter number. This field is mapped to the jXchange field CollatDocExcLtrId. The default value is blank.</description>
    <inlineHelpText>Enter a Collateral Document Exception Letter Number.</inlineHelpText>
    <label>Collateral Document Exception Letter ID</label>
    <length>3</length>
    <type>Text</type>
</CustomField>