force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/JHJX__CollatDocExcLtrNoSent__c.field-meta.xml
<CustomField>
    <fullName>JHJX__CollatDocExcLtrNoSent__c</fullName>
    <description>Users populate this optional text field to specify the collateral document expired letter days. This field is mapped to the jXchange field CollatDocExcLtrNoSent. The default value is blank.</description>
    <inlineHelpText>Enter a Collateral Document Expired Letter Days.</inlineHelpText>
    <label>Collateral Document Expired Letter Days</label>
    <length>5</length>
    <type>Text</type>
</CustomField>