force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/JHJX__CollatDocExpDt__c.field-meta.xml
<CustomField>
    <fullName>JHJX__CollatDocExpDt__c</fullName>
    <description>Users populate this optional date field to specify a collateral document expiration date. This field is mapped to the jXchange field CollatDocExpDt. The default value is blank.</description>
    <inlineHelpText>Enter a Collateral Document Expiration Date.</inlineHelpText>
    <label>Collateral Document Expiration Date</label>
    <type>Date</type>
</CustomField>