force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/JHJX__CollatDocOffCode__c.field-meta.xml
<CustomField>
    <fullName>JHJX__CollatDocOffCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Users populate this optional lookup field to specify a collateral document officer code. This field is mapped to the jXchange field CollatDocOffCode. The default value is blank.</description>
    <inlineHelpText>Enter a Collateral Document Officer Code.</inlineHelpText>
    <label>Collateral Document Officer Code</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Document_Placeholders</relationshipName>
    <type>Lookup</type>
</CustomField>