force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/JHJX__CollatDocPrtRcpt__c.field-meta.xml
<CustomField>
    <fullName>JHJX__CollatDocPrtRcpt__c</fullName>
    <description>Users populate this optional picklist field to specify a collateral document print receipt letter. This field is mapped to the jXchange field CollatDocPrtRcpt. The default value is blank.</description>
    <inlineHelpText>Select a Collateral Document Print Receipt Letter.</inlineHelpText>
    <label>Collateral Document Print Receipt Letter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>