force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/JHJX__CollatDocRcptLtrId__c.field-meta.xml
<CustomField>
    <fullName>JHJX__CollatDocRcptLtrId__c</fullName>
    <description>Users populate this optional text field to specify a collateral document receipt letter number. This field is mapped to the jXchange field CollatDocRcptLtrId. The default value is blank.</description>
    <inlineHelpText>Enter a Collateral Document Receipt Letter Number.</inlineHelpText>
    <label>Collateral Document Receipt Letter ID</label>
    <length>3</length>
    <type>Text</type>
</CustomField>