force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/JHJX__CollatDocRecvDt__c.field-meta.xml
<CustomField>
    <fullName>JHJX__CollatDocRecvDt__c</fullName>
    <description>Users populate this optional date field to specify a collateral document date received. This field is mapped to the jXchange field CollatDocRecvDt. The default value is blank.</description>
    <inlineHelpText>Enter a Collateral Document Date Received.</inlineHelpText>
    <label>Collateral Document Date Received</label>
    <type>Date</type>
</CustomField>