force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/JHJX__CollatDocStat__c.field-meta.xml
<CustomField>
    <fullName>JHJX__CollatDocStat__c</fullName>
    <description>Users populate this optional picklist field to specify a collateral document status code. This field is mapped to the jXchange field CollatDocStat. The default value is blank.</description>
    <inlineHelpText>Select a Collateral Document Status Code.</inlineHelpText>
    <label>Collateral Document Status Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CI</fullName>
                <label>Collateral Incomplete</label>
            </value>
            <value>
                <fullName>CO</fullName>
                <label>Charged Off</label>
            </value>
            <value>
                <fullName>CR</fullName>
                <label>Out for Collection or Reissue</label>
            </value>
            <value>
                <fullName>DC</fullName>
                <label>Document Complete</label>
            </value>
            <value>
                <fullName>EX</fullName>
                <label>Expired</label>
            </value>
            <value>
                <fullName>FB</fullName>
                <label>Hold for Future Borrowings</label>
            </value>
            <value>
                <fullName>FR</fullName>
                <label>In Foreclusure</label>
            </value>
            <value>
                <fullName>PO</fullName>
                <label>Paid Off</label>
            </value>
            <value>
                <fullName>RL</fullName>
                <label>Release only upon officer approval</label>
            </value>
            <value>
                <fullName>SC</fullName>
                <label>Secures loans in other departments</label>
            </value>
            <value>
                <fullName>SF</fullName>
                <label>Held for Safekeeping</label>
            </value>
            <value>
                <fullName>SP</fullName>
                <label>Special (Refer to Management)</label>
            </value>
            <value>
                <fullName>TR</fullName>
                <label>Collateral on Trust Receipt</label>
            </value>
            <value>
                <fullName>WV</fullName>
                <label>Waived</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>