force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/JHJX__CollatDocWavDt__c.field-meta.xml
<CustomField>
    <fullName>JHJX__CollatDocWavDt__c</fullName>
    <description>Users populate this optional date field to specify a collateral document waive date. This field is mapped to the jXchange field CollatDocWavDt. The default value is blank.</description>
    <inlineHelpText>Enter a Collateral Document Waive Date.</inlineHelpText>
    <label>Collateral Document Waive Date</label>
    <type>Date</type>
</CustomField>