force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/LLC_BI__Exception_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Exception_Date__c</fullName>
    <description>This field is optional and can be used to specify a document exception date. If the exception date is the current date or prior, the document review status will automatically be set to Exception.</description>
    <label>Exception Date</label>
    <type>Date</type>
</CustomField>