force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/LLC_BI__lookupKey__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__lookupKey__c</fullName>
    <description>This field is not required but is automatically populated. The lookupKey is an external, unique key for this placeholder.</description>
    <label>lookupKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>