force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/LLC_BI__Placeholder_Viewer_Groups__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Placeholder_Viewer_Groups__c</fullName>
    <description>This field is an optional, semicolon-delimited list that limits the accessibility of a specific document to the public groups added. Access includes the ability to view, download, copy the URL, and track the version history of the document. When left blank, no viewer restrictions are applied based on public groups. This field works in tandem with Placeholder Viewer Roles and Placeholder Viewer Profiles to determine which users can access a document.</description>
    <label>Placeholder Viewer Groups</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>