force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/LLC_BI__Review_Status__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Review_Status__c</fullName>
    <description>This field is not required, but the user must populate it when in use. This field stores the status of a placeholder. A placeholder without an attachment can have a value of Open, Waived, or Exception. When a file is uploaded, it can have a value of Approved, Exception, Reviewed or Waived. A user can change these status values depending on their permissions.</description>
    <label>Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Exception</fullName>
            </value>
            <value>
                <fullName>In-File</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Awaiting Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>