force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/LLC_BI__Year__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Year__c</fullName>
    <description>This field is optional and stores the document year. This field gets set automatically when the date is set.</description>
    <label>Year</label>
    <length>50</length>
    <type>Text</type>
</CustomField>