force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/NDOC__Account__c.field-meta.xml
<CustomField>
    <fullName>NDOC__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is optional and associates the placeholder to a relationship (account) record. The default picklist values are the legal entities related to the object in context when viewed in the edit details modal of Document Manager.</description>
    <label>Legal Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Document Placeholders</relationshipLabel>
    <relationshipName>Document_Placeholders</relationshipName>
    <type>Lookup</type>
</CustomField>