force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/NDOC__Collateral_Ownership__c.field-meta.xml
<CustomField>
    <fullName>NDOC__Collateral_Ownership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is not currently used.</description>
    <label>Collateral Ownership</label>
    <referenceTo>LLC_BI__Account_Collateral__c</referenceTo>
    <relationshipLabel>Document Placeholders</relationshipLabel>
    <relationshipName>Document_Placeholders</relationshipName>
    <type>Lookup</type>
</CustomField>