force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/NDOC__Created_By_Closing_Checklist_Id__c.field-meta.xml
<CustomField>
    <fullName>NDOC__Created_By_Closing_Checklist_Id__c</fullName>
    <description>This field is not required. It auto-populates if the placeholder is created from a closing checklist.</description>
    <label>Created_By_Closing_Checklist_Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>