force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/NDOC__File_Name__c.field-meta.xml
<CustomField>
    <fullName>NDOC__File_Name__c</fullName>
    <description>This field is not currently used.</description>
    <label>File Name</label>
    <type>TextArea</type>
</CustomField>