force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/NDOC__Help_Text__c.field-meta.xml
<CustomField>
    <fullName>NDOC__Help_Text__c</fullName>
    <description>This field is not currently used.</description>
    <label>helpText</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>