force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/NDOC__Mime_Type__c.field-meta.xml
<CustomField>
    <fullName>NDOC__Mime_Type__c</fullName>
    <description>This field is optional and automatically populates when a file is uploaded. This field records the MIME type (file extension) of the file uploaded to a placeholder.</description>
    <label>mimeType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>