force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/NDOC__Owner_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>NDOC__Owner_Object_Id__c</fullName>
    <description>This field is not currently used.</description>
    <label>ownerObjectId</label>
    <length>128</length>
    <type>Text</type>
</CustomField>